--- a/assets/manifest.json
+++ b/assets/manifest.json
@@ -38,7 +38,8 @@
         {"code": 16, "desc": "Image size under conditions: unsble to resize image"},
         {"code": 17, "desc": "Unwanted media convertion try, Check the media property or report it!"},
         {"code": 18, "desc": "Access not possible using provided API Key, Check the API Key or report it!"},
-        {"code": 19, "desc": "Routes not found on thi url, Check the end point or report it!"}
+        {"code": 19, "desc": "Image Processing not possible using provided information, Check the media or repot it!"},
+        {"code": 20, "desc": "Routes not found on thi url, Check the end point or report it!"}
     ],
     "error_schema": {
         "error": "... Exception",
